# vscode-base-python-project

./: README.md  pyproject.toml
